--- a/desafio_mobile/android/app/src/main/res/values/strings.xml
+++ b/desafio_mobile/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name"><desafio_mobile></string>
+    <string name="app_name">desafio_mobile</string>
 
     <!-- Replace "000000000000" with your Facebook App ID here. -->
     <string name="facebook_app_id">1024704087936226</string>
